# sae-protein-design

./: .gitignore  .gitmodules  LICENSE  README.md  README_UPDATED.md  active_learning_sim.py  agentic_adapter.py  analysis_metrics.py  epoch_metrics.csv  extract_codes.py  extract_from_hf_model.py  extract_latents.py  generate_activations.py  generate_and_evaluate.py  learn_dictionary.py  mod_man_utils.py  optimize_latent.py  pyproject.toml  pytest.ini  requirements.txt  run_all_no_model_steering.ps1  run_pipeline.py  setup.ps1  setup.sh  testlog.txt  train.py  train_sae.py  visualize.py  visualize_results.py
agentic_lab/: agentic_adapter.py  agents.py  loop.py  run_demo.py  schema.py  tools.py
cache/: decodes.pkl  encodings.pkl
diagnostics/: run_diagnostics.py
experiments/: pipeline_utils.py  poc_pipeline.py  run_poc_traversal.py  run_surgical_traversal.py  run_surgical_traversal.txt
install_hooks/: __init__.py  __main__.py  pyproject.toml
install_hooks/install_hooks/: __init__.py
ml_models/: INTEGRATION_CHECKLIST.md  ML_MODELS_GUIDE.md  TESTING_GUIDE.md  __init__.py  cli_train.py  data_utils.py  encoding.py  metrics.py  model_scout.py  models.py  train.py
outputs/: latent_property_correlation_mono.csv  metadata.json  metrics_summary.json  sae_mono_esm2-8m_layer4_config.json  sequences.npy  sparse_codes_mono.npy
proteng_model_scout/: README.md  pyproject.toml
proteng_model_scout/model_scout/: data.py  encoding.py  main.py  metrics.py  plotting.py  report.py  run_single.py  training.py
proteng_model_scout/model_scout.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
proteng_model_scout/proteng_scout/: __init__.py  aggregator.py  config.py  main.py  run_single.py
proteng_model_scout/proteng_scout.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
runs/diagnostic_run/: memory.json
runs/manual_demo_run/: memory.json
runs/pytest_demo_run/: memory.json
sae/: extract_codes.py  generate_activations.py  latent_traversal.py  qq_plot_pvalues.py  run_pipeline.py  steer_latent_tool.py
sae/analysis/: feature_atlas.py
sae/decoder/: cli.py  data.py  models.py  sample.py  train.py
sae/experiments/: no_model_steering.py
sae/experiments/no_model_steering_modules/: cache_utils.py  parallel_utils.py  ridge_utils.py  steering_utils.py
sae/steering/: poc_latent_field.py  train_latent_field.py  train_latent_field_pg.py
sae/steering/pg/: cache_utils.py  data_utils.py  eval_utils.py  perturb_utils.py  policy.py  surrogate_utils.py
sae/steering/train_latent_field_pg/: cache_helpers.py  cli.py  epoch_step.py  run_train.py  train_loop.py  utils_train.py
sae/tests/: random_genes.txt  random_sequences.txt
sae/utils/: esm_utils.py  grade_reconstructions.py  model_utils.py
scoring/: __init__.py  esm_fold_interface.py  surrogate_models.py
temp/: activations.npy  labels.npy
tests/: conftest.py  reconstruction_report.csv  reconstruction_report_650m.csv  test_agentic_loop.py  test_archivist_agent.py  test_engineer_agent.py  test_imports.py  test_plot_report.py  test_real_sae_decode.py  test_real_sae_encode.py  test_reconstruction.py  test_reviewer_agent.py  test_scientist_agent.py
tests/atlas/: test_feature_atlas_basic.py  test_feature_atlas_edge_cases.py
tests/decoder/: test_data.py  test_integration_pipeline.py  test_models.py  test_train_and_sample.py
tests/ml_models/: conftest.py  test_auto_outdir_generation.py  test_cli_train.py  test_data_utils.py  test_encoding.py  test_encoding_cache.py  test_model_output_consistency.py  test_model_scout.py  test_models.py  test_npy_loading.py  test_plot_report.py  test_run_single.py  test_training_pipeline.py
tests/perturbation/: conftest.py  test_candidate_selection.py  test_poc_pipeline.py  test_surrogate_scorer.py  test_whole_sequence_perturbation.py
tests/pipeline/: conftest.py  test_reconstruction_pipeline.py
utils/: analysis_utils.py  data_utils.py  esm_utils.py  model_utils.py
