[project]
name = "sae-protein-design"
version = "0.9"
description = "A package for a project about designing proteins using SAEs"
authors = [
    {name = "Juan Irizarry-Cole",email = "juan.irizarry.cole@gmail.com"}
]
license = {text = "Proprietary"}
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "accelerate (==1.10.1)",
    "aiohappyeyeballs (==2.6.1)",
    "aiohttp (==3.13.0)",
    "aiosignal (==1.4.0)",
    "annotated-types (==0.7.0)",
    "anyio (==4.11.0)",
    "attrs (==25.4.0)",
    "babe (==0.0.7)",
    "beartype (==0.14.1)",
    "better-abc (==0.0.3)",
    "biopython (==1.85)",
    "certifi (==2025.10.5)",
    "charset-normalizer (==3.4.4)",
    "click (==8.3.0)",
    "build (==1.3.0)",
    "cachecontrol (==0.14.3)",
    "colorama (==0.4.6)",
    "config2py (==0.1.42)",
    "contourpy (==1.3.3)",
    "cycler (==0.12.1)",
    "datasets (==4.2.0)",
    "dill (==0.4.0)",
    "distlib (==0.4.0)",
    "docstring-parser (==0.17.0)",
    "dol (==0.3.30)",
    "dulwich (==0.24.7)",
    "einops (==0.8.1)",
    "fair-esm (==2.0.0)",
    "fancy-einsum (==0.0.3)",
    "fastjsonschema (==2.21.2)",
    "filelock (==3.20.0)",
    "findpython (==0.7.0)",
    "fonttools (==4.60.1)",
    "frozenlist (==1.8.0)",
    "fsspec (==2025.9.0)",
    "gitdb (==4.0.12)",
    "gitpython (==3.1.45)",
    "graze (==0.1.31)",
    "h11 (==0.16.0)",
    "h5py (==3.15.0)",
    "httpcore (==1.0.9)",
    "httpx (==0.28.1)",
    "huggingface-hub (==0.35.3)",
    "i2 (==0.1.58)",
    "idna (==3.11)",
    "importlib-resources (==6.5.2)",
    "iniconfig (==2.1.0)",
    "installer (==0.7.0)",
    "jaraco-classes (==3.4.0)",
    "jaraco-context (==6.0.1)",
    "jaraco-functools (==4.3.0)",
    "jaxtyping (==0.3.3)",
    "jinja2 (==3.1.6)",
    "joblib (==1.5.2)",
    "keyring (==25.6.0)",
    "kiwisolver (==1.4.9)",
    "levenshtein (==0.27.1)",
    "lightgbm (==4.6.0)",
    "markdown-it-py (==4.0.0)",
    "markupsafe (==3.0.3)",
    "matplotlib (==3.10.7)",
    "mdurl (==0.1.2)",
    "more-itertools (==10.8.0)",
    "mpmath (==1.3.0)",
    "msgpack (==1.1.2)",
    "multidict (==6.7.0)",
    "multiprocess (==0.70.16)",
    "narwhals (==2.8.0)",
    "networkx (==3.5)",
    "nltk (==3.9.2)",
    "numpy (==1.26.4)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
