[project]
name = "sae-protein-design"
version = "0.9"
description = "A package for a project about designing proteins using SAEs"
authors = [
    {name = "Juan Irizarry-Cole",email = "juan.irizarry.cole@gmail.com"}
]
license = {text = "Proprietary"}
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "accelerate (==1.10.1)",
    "aiohappyeyeballs (==2.6.1)",
    "aiohttp (==3.13.0)",
    "aiosignal (==1.4.0)",
    "annotated-types (==0.7.0)",
    "anyio (==4.11.0)",
    "attrs (==25.4.0)",
    "babe (==0.0.7)",
    "beartype (==0.14.1)",
    "better-abc (==0.0.3)",
    "biopython (==1.85)",
    "certifi (==2025.10.5)",
    "charset-normalizer (==3.4.4)",
    "click (==8.3.0)",
    "build (==1.3.0)",
    "cachecontrol (==0.14.3)",
    "colorama (==0.4.6)",
    "config2py (==0.1.42)",
    "contourpy (==1.3.3)",
    "cycler (==0.12.1)",
    "datasets (==4.2.0)",
    "dill (==0.4.0)",
    "distlib (==0.4.0)",
    "docstring-parser (==0.17.0)",
    "dol (==0.3.30)",
    "dulwich (==0.24.7)",
    "einops (==0.8.1)",
    "fair-esm (==2.0.0)",
    "fancy-einsum (==0.0.3)",
    "fastjsonschema (==2.21.2)",
    "filelock (==3.20.0)",
    "findpython (==0.7.0)",
    "fonttools (==4.60.1)",
    "frozenlist (==1.8.0)",
    "fsspec (==2025.9.0)",
    "gitdb (==4.0.12)",
    "gitpython (==3.1.45)",
    "graze (==0.1.31)",
    "h11 (==0.16.0)",
    "h5py (==3.15.0)",
    "httpcore (==1.0.9)",
    "httpx (==0.28.1)",
    "huggingface-hub (==0.35.3)",
    "i2 (==0.1.58)",
    "idna (==3.11)",
    "importlib-resources (==6.5.2)",
    "iniconfig (==2.1.0)",
    "installer (==0.7.0)",
    "jaraco-classes (==3.4.0)",
    "jaraco-context (==6.0.1)",
    "jaraco-functools (==4.3.0)",
    "jaxtyping (==0.3.3)",
    "jinja2 (==3.1.6)",
    "joblib (==1.5.2)",
    "keyring (==25.6.0)",
    "kiwisolver (==1.4.9)",
    "levenshtein (==0.27.1)",
    "lightgbm (==4.6.0)",
    "markdown-it-py (==4.0.0)",
    "markupsafe (==3.0.3)",
    "matplotlib (==3.10.7)",
    "mdurl (==0.1.2)",
    "more-itertools (==10.8.0)",
    "mpmath (==1.3.0)",
    "msgpack (==1.1.2)",
    "multidict (==6.7.0)",
    "multiprocess (==0.70.16)",
    "narwhals (==2.8.0)",
    "networkx (==3.5)",
    "nltk (==3.9.2)",
    "numpy (==1.26.4)",
    "packaging (==25.0)",
    "pandas (==2.3.3)",
    "parasail (==1.3.4)",
    "patsy (==1.0.1)",
    "pbs-installer (==2025.10.14)",
    "pillow (==11.3.0)",
    "pkginfo (==1.12.1.2)",
    "platformdirs (==4.5.0)",
    "plotly (==6.3.1)",
    "plotly-express (==0.4.1)",
    "pluggy (==1.6.0)",
    "propcache (==0.4.1)",
    "protobuf (==6.32.1)",
    "psutil (==7.1.0)",
    "py2store (==0.1.21)",
    "pyarrow (==21.0.0)",
    "pydantic (==2.12.2)",
    "pydantic-core (==2.41.4)",
    "pygments (==2.19.2)",
    "pyparsing (==3.2.5)",
    "pyproject-hooks (==1.2.0)",
    "pytest (==8.4.2)",
    "python-dateutil (==2.9.0.post0)",
    "python-dotenv (==1.1.1)",
    "pytz (==2025.2)",
    "pywin32-ctypes (==0.2.3)",
    "pyyaml (==6.0.3)",
    "rapidfuzz (==3.14.1)",
    "regex (==2025.9.18)",
    "requests (==2.32.5)",
    "requests-toolbelt (==1.0.0)",
    "rich (==14.2.0)",
    "safetensors (==0.6.2)",
    "scikit-learn (==1.7.2)",
    "scipy (==1.16.2)",
    "seaborn (==0.13.2)",
    "sentencepiece (==0.2.1)",
    "sentry-sdk (==2.41.0)",
    "setuptools (==80.9.0)",
    "shellingham (==1.5.4)",
    "six (==1.17.0)",
    "smmap (==5.0.2)",
    "sniffio (==1.3.1)",
    "statsmodels (==0.14.5)",
    "sympy (==1.14.0)",
    "tenacity (==9.1.2)",
    "threadpoolctl (==3.6.0)",
    "tokenizers (==0.22.1)",
    "tomlkit (==0.13.3)",
    "tqdm (==4.67.1)",
    "transformers (==4.57.1)",
    "transformers-stream-generator (==0.0.5)",
    "trove-classifiers (==2025.9.11.17)",
    "typeguard (==4.4.4)",
    "typing-inspection (==0.4.2)",
    "typing-extensions (==4.15.0)",
    "tzdata (==2025.2)",
    "urllib3 (==2.5.0)",
    "virtualenv (==20.35.3)",
    "wadler-lindig (==0.1.7)",
    "wandb (==0.22.2)",
    "xgboost (==3.1.1)",
    "xxhash (==3.6.0)",
    "yarl (==1.22.0)",
    "zstandard (==0.25.0)"
]

[build-system]
# poetry-core handles normal builds; the local install_hooks shim will execute automatically
requires = [
    "poetry-core>=2.0.0,<3.0.0",
    "install-hooks @ file:///${PROJECT_ROOT}/install_hooks"
]
build-backend = "poetry.core.masonry.api"
