[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "proteng-scout"
version = "0.1.0"
description = "Parallel model scouting with plots and HTML report; auto-detects project ml_models"
authors = [{ name = "Protein Engineering" }]
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
  "numpy",
  "pandas",
  "scipy",
  "scikit-learn",
  "joblib",
  "matplotlib",
  "seaborn"
]

[project.scripts]
model-scout = "proteng_scout.main:cli_entry"
